[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ldifj"
authors = [
  {name = "Philipp Schmitt", email = "philipp@schmitt.co"},
]
description = "LDAP LDIF to JSON"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["ldap", "ldif", "json"]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "python-ldap",
  "rich",
  "rich-argparse"
]
version = "0.1.0"

[tool.black]
line-length = 79

[project.scripts]
ldifj = "ldifj:main"
